renamed files to more appropriately represent exactly what they do

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -44,8 +44,7 @@
     "import beam__common\n",
     "import fidscs_globals\n",
     "\n",
-    "from importlib import import_module\n",
-    "data_extractor = import_module('data-extractor', '.')"
+    "import data_extractor"
    ]
   },
   {
