massive overhaul for more uniform fileio interface, which was required for GCS fileio

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -31,12 +31,12 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "client: <google.cloud.storage.client.Client object at 0x7fb0556f7760>\n"
+      "fidscs_globals.WORK_DIR: gs://sc-fids-capstone-bucket-sc-fids-capstone\nfidscs_globals.GCS_CLIENT: <google.cloud.storage.client.Client object at 0x7f992ff781c0>\nfidscs_globals.GCS_IO: <apache_beam.io.gcp.gcsio.GcsIO object at 0x7f9926eeefa0>\n"
      ]
     }
    ],
    "source": [
-    "from api import data_extractor\n",
+    "from api import data_extractor, data_extractor__common\n",
     "from api import beam__common\n",
     "from api import fidscs_globals\n",
     "\n",
@@ -44,11 +44,19 @@
     "from apache_beam.io.localfilesystem import LocalFileSystem\n",
     "\n",
     "import google.cloud.storage as gcs\n",
+    "from apache_beam.io.gcp import gcsio\n",
+    "\n",
     "beam_gcp_project = 'sc-fids-capstone'\n",
     "gcs_bucket = 'sc-fids-capstone-bucket-sc-fids-capstone'\n",
+    "fidscs_globals.WORK_DIR = 'gs://'+gcs_bucket\n",
+    "print(f\"fidscs_globals.WORK_DIR: {fidscs_globals.WORK_DIR}\")\n",
+    "\n",
     "gcp_auth_key_path = os.environ['GOOGLE_APPLICATION_CREDENTIALS']\n",
     "fidscs_globals.GCS_CLIENT = gcs.Client.from_service_account_json(gcp_auth_key_path)\n",
-    "print(f\"client: {fidscs_globals.GCS_CLIENT}\")"
+    "print(f\"fidscs_globals.GCS_CLIENT: {fidscs_globals.GCS_CLIENT}\")\n",
+    "\n",
+    "fidscs_globals.GCS_IO = gcsio.GcsIO()   # gcsio.GcsIO(storage_client=fidscs_globals.GCS_CLIENT)\n",
+    "print(f\"fidscs_globals.GCS_IO: {fidscs_globals.GCS_IO}\")"
    ]
   },
   {
@@ -60,10 +68,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "bucket: <Bucket: sc-fids-capstone-bucket-sc-fids-capstone>\n",
+      "fidscs_globals.GCS_BUCKET: <Bucket: sc-fids-capstone-bucket-sc-fids-capstone>\n",
       "\n",
       "blobs in gcs bucket (sc-fids-capstone-bucket-sc-fids-capstone):\n",
-      "[]\n",
+      "[<Blob: sc-fids-capstone-bucket-sc-fids-capstone, data/, 1612417860117900>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, data/stitched_video_frames/, 1612401872177603>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, data/tmp/, 1612401871328771>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, data/videos/, 1612401871830298>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612406192.684133/apache_beam-2.26.0-cp38-cp38-manylinux1_x86_64.whl, 1612406202565266>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612406192.684133/dataflow_python_sdk.tar, 1612406197752629>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612406192.684133/pickled_main_session, 1612406202714786>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612406192.684133/pipeline.pb, 1612406195414745>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612406192.684133/workflow.tar.gz, 1612406195577269>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408113.889395/apache_beam-2.26.0-cp38-cp38-manylinux1_x86_64.whl, 1612408122535038>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408113.889395/dataflow_python_sdk.tar, 1612408118083475>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408113.889395/pickled_main_session, 1612408122699179>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408113.889395/pipeline.pb, 1612408116620965>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408113.889395/workflow.tar.gz, 1612408116772907>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408529.710595/apache_beam-2.26.0-cp38-cp38-manylinux1_x86_64.whl, 1612408538040076>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408529.710595/dataflow_python_sdk.tar, 1612408533917620>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408529.710595/pickled_main_session, 1612408538302278>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408529.710595/pipeline.pb, 1612408532428264>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408529.710595/workflow.tar.gz, 1612408532617995>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408652.157262/apache_beam-2.26.0-cp38-cp38-manylinux1_x86_64.whl, 1612408661546498>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408652.157262/dataflow_python_sdk.tar, 1612408656388350>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408652.157262/pickled_main_session, 1612408662017403>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408652.157262/pipeline.pb, 1612408654874717>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408652.157262/sc-fids-capstone-etl.1612408681.354366/apache_beam-2.26.0-cp38-cp38-manylinux1_x86_64.whl, 1612408690744667>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408652.157262/sc-fids-capstone-etl.1612408681.354366/dataflow_python_sdk.tar, 1612408685600987>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408652.157262/sc-fids-capstone-etl.1612408681.354366/pickled_main_session, 1612408690879386>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408652.157262/sc-fids-capstone-etl.1612408681.354366/pipeline.pb, 1612408684075900>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408652.157262/sc-fids-capstone-etl.1612408681.354366/workflow.tar.gz, 1612408684246765>, <Blob: sc-fids-capstone-bucket-sc-fids-capstone, dataflow/staging/sc-fids-capstone-etl.1612408652.157262/workflow.tar.gz, 1612408655027877>]\n",
       "\n",
       "test_folder: <Blob: sc-fids-capstone-bucket-sc-fids-capstone, test_folder/, None>, exists: False\n",
       "not_exist_folder: <Blob: sc-fids-capstone-bucket-sc-fids-capstone, not_exist/, None>, exists: False\n",
@@ -79,7 +87,7 @@
    ],
    "source": [
     "fidscs_globals.GCS_BUCKET = gcs.Bucket(fidscs_globals.GCS_CLIENT, name=gcs_bucket, user_project=beam_gcp_project)\n",
-    "print(f\"bucket: {fidscs_globals.GCS_BUCKET}\")\n",
+    "print(f\"fidscs_globals.GCS_BUCKET: {fidscs_globals.GCS_BUCKET}\")\n",
     "\n",
     "all_blobs = list(fidscs_globals.GCS_CLIENT.list_blobs(gcs_bucket))\n",
     "print(f\"\\nblobs in gcs bucket ({gcs_bucket}):\\n{all_blobs}\")\n",
@@ -104,21 +112,8 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "beam__common.make_dirs (debug): making directory gs://sc-fids-capstone-bucket-sc-fids-capstone/data (gcs-corrected: data/) for GCSFileSystem\n",
-      "\n",
-      "gs://sc-fids-capstone-bucket-sc-fids-capstone/data: <Blob: sc-fids-capstone-bucket-sc-fids-capstone, data/, None>, exists: False, creating...\n",
-      "\n",
-      "gs://sc-fids-capstone-bucket-sc-fids-capstone/data: <Blob: sc-fids-capstone-bucket-sc-fids-capstone, data/, 1612398055575743>, exists: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fidscs_globals.WORK_DIR = 'gs://'+gcs_bucket\n",
     "beam__common.make_dirs('gs://'+gcs_bucket+'/data')"
    ]
   },
@@ -131,13 +126,12 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "empty\n",
-      "empty\n"
+      "['stitched_video_frames/', 'tmp/', 'videos/']\nempty\n"
      ]
     }
    ],
    "source": [
-    "l = beam__common.list_dir('gs://'+gcs_bucket+'/data', exclude_subdir=True)\n",
+    "l = beam__common.list_dir('gs://'+gcs_bucket+'/data', exclude_subdir=False)\n",
     "print(f\"{l if len(l)>0 else 'empty'}\")\n",
     "\n",
     "l = beam__common.list_dir('gs://'+gcs_bucket+'/test_folder/', exclude_subdir=True)\n",
@@ -146,10 +140,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "beam__common.delete_file('gs://'+gcs_bucket+'/test_folder', recursive=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "  1%|          | 8192/835568 [00:00<00:13, 61308.72it/s]Downloading http://secrets.rutgers.edu/dai/xml/ncslgr-xml.zip (filesize: 835568 bytes) to gs://sc-fids-capstone-bucket-sc-fids-capstone/data/ncslgr-corpus-index.csv...\n",
+      "\n",
+      "100%|██████████| 835568/835568 [00:02<00:00, 326391.84it/s]Successfully downloaded 835568/835568 bytes from URL file http://secrets.rutgers.edu/dai/xml/ncslgr-xml.zip to local file gs://sc-fids-capstone-bucket-sc-fids-capstone/data/ncslgr-corpus-index.csv!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_extractor__common.download('http://secrets.rutgers.edu/dai/xml/ncslgr-xml.zip', 'gs://'+gcs_bucket+'/data/ncslgr-corpus-index.csv')"
+   ]
   }
  ]
 }
