--- a/training_investigation.ipynb
+++ b/training_investigation.ipynb
@@ -132,7 +132,7 @@
    "source": [
     "can_proceed = True\n",
     "\n",
-    "if not tf.io.gfile.exists(fidscs_globals.DATA_ROOT_DIR) or len(tf.io.gfile.listdir(fidscs_globals.DATA_ROOT_DIR))==0:\n",
+    "if not data_extractor__common.path_exists(fidscs_globals.DATA_ROOT_DIR) or len(beam__common.list_dir(fidscs_globals.DATA_ROOT_DIR))==0:\n",
     "    print(f\"{fidscs_globals.VALIDATION_FATAL_ERROR_TEXT} data directory does not exist or is empty!\")\n",
     "    can_proceed = False\n",
     "else:\n",
