--- a/etl.ipynb
+++ b/etl.ipynb
@@ -51,6 +51,7 @@
     "import zipfile\n",
     "import cv2\n",
     "import io\n",
+    "import os\n",
     "\n",
     "beam_gcp_project = 'sc-fids-capstone'\n",
     "gcs_bucket = 'sc-fids-capstone-bucket-sc-fids-capstone'\n",
